<resources>
    <string name="app_name">Trisutra\nAyurveda</string>
    <string name="vata">VATA</string>
    <string name="energy_of_movement">Energy of movement</string>
    <string name="energy_of_transformation">Energy of transformation</string>
    <string name="pitta">PITTA</string>
    <string name="energy_of_lubrication_and_structure">Energy of lubrication and structure</string>
    <string name="kapha">KAPHA</string>
    <string name="next">NEXT</string>
    <string name="start_test">START TEST</string>
    <string name="city">City</string>
    <string name="email_id">Email Id</string>
    <string name="contact_no">Contact No</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="full_name">Full Name</string>
    <string name="register">Register</string>
</resources>
