<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="onClick"
            type="android.view.View.OnClickListener" />
    </data>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/ll_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_vata"
        android:orientation="vertical"
        tools:context=".activity.RegistrationActivity">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardElevation="@dimen/_3sdp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_20sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_logo" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:background="@drawable/bg_registration_edit_text"
                        android:gravity="center_vertical"
                        android:hint="@string/full_name"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/text_normal"
                        android:textColorHint="@color/text_normal"
                        android:textSize="@dimen/textsize_14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:background="@drawable/bg_registration_edit_text"
                        android:gravity="center_vertical"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/date_of_birth"
                        android:textColor="@color/text_normal"
                        android:textSize="@dimen/textsize_14sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:background="@drawable/bg_registration_edit_text"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="@dimen/_10sdp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="@string/gender"
                            android:textColor="@color/text_normal" />

                        <RadioGroup
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_16sdp"
                            android:layout_marginStart="@dimen/_16sdp"
                            android:orientation="horizontal">

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/male"
                                android:textColor="@color/text_normal" />

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/_7sdp"
                                android:layout_marginStart="@dimen/_7sdp"
                                android:text="@string/female"
                                android:textColor="@color/text_normal" />
                        </RadioGroup>
                    </LinearLayout>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:background="@drawable/bg_registration_edit_text"
                        android:gravity="center_vertical"
                        android:hint="@string/contact_no"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLines="1"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/text_normal"
                        android:textColorHint="@color/text_normal"
                        android:textSize="@dimen/textsize_14sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:background="@drawable/bg_registration_edit_text"
                        android:gravity="center_vertical"
                        android:hint="@string/email_id"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/text_normal"
                        android:textColorHint="@color/text_normal"
                        android:textSize="@dimen/_14sdp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:background="@drawable/bg_registration_edit_text"
                        android:gravity="center_vertical"
                        android:hint="@string/city"
                        android:imeOptions="actionDone"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/text_normal"
                        android:textColorHint="@color/text_normal"
                        android:textSize="@dimen/textsize_14sp" />

                    <Button
                        android:id="@+id/btn_register"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:background="@drawable/bg_button"
                        android:gravity="center"
                        android:onClick="@{onClick::onClick}"
                        android:text="@string/register"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/textsize_16sp" />

                </LinearLayout>
            </ScrollView>
        </android.support.v7.widget.CardView>
    </FrameLayout>
</layout>